cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

add_executable(CodeForces
        "Gas Pipeline.cpp"
        "Sweets Eating.cpp"
        "Odd Sum.cpp"
        "DId you mean....cpp"
        Banana.cpp
        "Physics Practical.cpp"
        "More Cowbell.cpp"
        "Maximum Median.cpp"
        "Charming Meals.cpp"
        Quests.cpp
        "Burning Midnight Oil.cpp"
        Queue.cpp
        "Magic Powder - 2.cpp"
        "Frodo and Pillows.cpp"
        Candies.cpp
        "Sagheer and Nubian Market .cpp"
        "Almost Increasing Subsequence.cpp"
        "Divide the Students.cpp"
        Triangle.cpp
        Permutations.cpp
        Cola.cpp
        "Division into Teams.cpp"
        "Painting Eggs.cpp"
        Lawnmower.cpp
        Median.cpp
        "Squares and Rectangles.cpp"
        "Weird Game.cpp"
        "Sheldon and Ice Pieces.cpp"
        "Vasya and Robot.cpp"
        "Two Semiknights Meet.cpp"
        "Feed with Candy.cpp"
        Treasure.cpp
        Bus.cpp
        Planning.cpp
        Heaters.cpp
        Lightsabers.cpp
        "Leibig's Barrels.cpp"
        "Fight with Monsters.cpp"
        "Workout Plan.cpp"
        "Good numbers hard version.cpp"
        "Find the Car.cpp"
        "ABBC or BACB .cpp"
        "Special Element.cpp"
        "Decrease the Sum of Digits.cpp"
        "Memory manager.cpp"
        "Energy Exchange.cpp"
        "Smallest Number.cpp"
        Hometask.cpp
        "CodeForces Beta Round 1/Spreadsheets.cpp"
)
