cmake_minimum_required(VERSION 3.28)
project(CodeForces)

set(CMAKE_CXX_STANDARD 17)

add_executable(CodeForces
        "Gas Pipeline.cpp"
        "Sweets Eating.cpp"
        "Odd Sum.cpp"
        "DId you mean....cpp"
        Banana.cpp
        "Physics Practical.cpp"
        "More Cowbell.cpp"
        "Maximum Median.cpp"
        "Charming Meals.cpp"
        Quests.cpp
        "Burning Midnight Oil.cpp"
        Queue.cpp
        "Magic Powder - 2.cpp"
        "Frodo and Pillows.cpp"
        Candies.cpp
        "Sagheer and Nubian Market .cpp"
        "Almost Increasing Subsequence.cpp"
        "Divide the Students.cpp"
        Triangle.cpp
        Permutations.cpp
        Cola.cpp
        "Division into Teams.cpp"
        "Painting Eggs.cpp"
        Lawnmower.cpp
        Median.cpp
        "Squares and Rectangles.cpp"
        "Weird Game.cpp"
        "Sheldon and Ice Pieces.cpp"
        "Vasya and Robot.cpp"
        "Two Semiknights Meet.cpp"
        "Feed with Candy.cpp"
        Treasure.cpp
        Bus.cpp
        Planning.cpp
        Heaters.cpp
        Lightsabers.cpp
        "Leibig's Barrels.cpp"
        "Fight with Monsters.cpp"
        "Workout Plan.cpp"
        "Good numbers hard version.cpp"
        "Find the Car.cpp"
        "ABBC or BACB .cpp"
        "Special Element.cpp"
        "Decrease the Sum of Digits.cpp"
        "Memory manager.cpp"
        "Energy Exchange.cpp"
        "Smallest Number.cpp"
        Hometask.cpp
        "CodeForces Beta Round 1/Spreadsheets.cpp"
        "Jumping Jack.cpp"
        "Geometry Horse.cpp"
        Sanish.cpp
        Sanish2.cpp
        Sanish3.cpp
        "Anfisa the Monkey.cpp"
        Priyanshu1.cpp
        Priyanshu2.cpp
        "Literature Lesson.cpp"
        "Modified GCD.cpp"
        Mafia.cpp
        Hamburgers.cpp
        "Counting Kangaroos is Fun.cpp"
        "Tourist's Space.cpp"
        "Enduring Exodus.cpp"
        "New Skateboard.cpp"
        Weather.cpp
        "Art Union.cpp"
        "Hamiltonian Wall.cpp"
        "Seraphim the Owl.cpp"
        Letter.cpp
        "Basketball Excercise.cpp"
        "Our Tanya is Crying Out Loud .cpp"
        "Constanze's Machine .cpp"
        "CSES - DP/Dice Combinations.cpp"
        "CSES - DP/Minimizing Coins.cpp"
        "CSES - DP/Coin Combinatrics I.cpp"
        "CSES - DP/Coin Combinartrics II.cpp"
        "As Simple as One and Two.cpp"
        "K for the Price of One.cpp"
        "CSES - DP/Removing Digits.cpp"
        "CSES - DP/Grid Paths.cpp"
        "CSES - DP/Book Shop.cpp"
        "Game on Permutation.cpp"
        "I hate 1111.cpp"
        "Find the Spruce.cpp"
        "CSES - DP/Array Discription.cpp"
        "CSES - DP/Array Description Tabulated.cpp"
        "Hossam and Friends.cpp"
        "CSES - DP/Array Description/Array Description 2.cpp"
        "Another Problem on Strings.cpp"
        "Orac and Models.cpp"
        "Round Table Knights.cpp"
        "BasketBall Team.cpp"
        "Multicolored Marbles.cpp"
        "Color Stripe.cpp"
        "Mysterious Present.cpp"
        Animals.cpp
        "CSES - DP/Counting Towers.cpp"
        "CSES - DP/Edit Distance.cpp"
        "CSES - DP/Rectangle Cutting.cpp"
        "CSES - DP/Money Sums.cpp"
        "CSES - DP/Removal Game.cpp"
        "CSES - DP/Two Sets II.cpp"
        "CSES - DP/Increasing Subsequence.cpp"
)


